code error updated

--- a/pom.xml
+++ b/pom.xml
@@ -57,8 +57,8 @@
                     </execution>
                 </executions>
       </plugin>
-    </plugins>
-    plugin>
+  
+    <plugin>
       <!-- Build an executable JAR -->
       <groupId>org.apache.maven.plugins</groupId>
       <artifactId>maven-jar-plugin</artifactId>
@@ -73,7 +73,7 @@
         </archive>
       </configuration>
     </plugin>
-  </plugins
+    </plugins>
     
   </build>
 
